--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -5,39 +5,37 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: #020060;
-
 }
 
 .container{
     display: grid;
     grid-template-columns: 1fr 1fr ;
-    grid-template-rows:80px 250px 1fr;
-    
+    grid-template-rows:0.04fr 1fr 0.04fr;
 }
 
 .item{
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-    justify-self: center;
-    border: 1px solid rgb(192, 190, 190);
-    padding: 35px;
-    border-radius: 20px;
-    box-shadow: -7px 0px 7px -5px #b6c2f3, 7px 0px 7px -5px #b6c2f3, 5px 5px 15px 5px rgba(0,0,0,0);
-}
-.logo{
-    grid-column-start: 2;
-    grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
     justify-self: center;
-    align-self: center;
+    border: 1px solid rgb(192, 190, 190);
+    padding:15px 50px 10px 50px;
+    border-radius: 20px;
+    box-shadow: -7px 0px 7px -5px rgb(252, 213, 219), 7px 0px 7px -5px #b6c2f3, 5px 5px 15px 5px rgba(0,0,0,0);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
 }
-.logo>img {
-    widows: 300px;
-    height: 300px;
-    margin:0px auto;
+/* .item input {
+    width: 250px;
+} */
+
+.item>img {
+    width: 250px;
+    height: 150px;
+    margin: 20px 0px;
 }
 
 .btn-primary {
