--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -13,8 +13,8 @@
 <body>
   <div class="container">
     <div class="item">
-      <img src="{% static 'images/Cocktail Bar (2).png' %}" class="text-center">
-      <form method="post" action="{% url 'signup' %}">
+      <img src="{% static 'images/dealishlogo.png' %}" class="text-center">
+      <form action="{% url 'signup' %} method="post"">
         {% csrf_token %}
         {{ form|crispy }}
         {% if form.errors %}
