--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-image: url('../images/Untitled (3).png');
     background-size: cover;
@@ -5,15 +6,21 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: #020060;
+    transition: all 1s ease-in;
 }
 
 .container{
+    
     display: grid;
     grid-template-columns: 1fr 1fr ;
-    grid-template-rows:0.04fr 1fr 0.04fr;
+    grid-template-rows:0.08fr 1fr 0.08fr;
+}
+#login-page {
+    grid-template-rows:0.15fr 1fr 0.07fr;
 }
 
 .item{
+    
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
@@ -28,9 +35,6 @@ body {
     align-items: center;
    
 }
-/* .item input {
-    width: 250px;
-} */
 
 .item>img {
     width: 250px;
@@ -59,4 +63,38 @@ a{
 a:hover {
     color:  #4d51ff;
     text-decoration: none;
+}
+
+
+@media only screen and (max-width: 992px) {
+    body{
+        background-image: url('../images/Untitled (4).png');
+        background-position: 6%;
+        transition: none;
+    }
+    .container{
+        display: grid;
+        grid-template-columns:1fr;
+        grid-template-rows:0.04fr 1fr 0.04fr;
+    }
+    .item{
+        grid-column-start: 0;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        padding:15px 30px 10px 30px;
+        
+    }
+    #login-page {
+        grid-template-rows:0.1fr 1fr 0.1fr;
+    }
+}
+
+@media only screen and (max-width: 1024px)and (min-width:992px ){
+    body{
+        background-position: 40% 10%;
+        background-size: inherit;
+        transition: none;
+    }
+
 }
