--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -11,11 +11,9 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <div class="logo">
-      <img src='{% static "images/Cocktail Bar (2).png" %}'>
-    </div>
-    <div class="item">
+  <div class="container" id="login-page">
+    <div class="item" >
+      <img src='{% static "images/dealishlogo.png" %}'>
       <form method="post" action="{% url 'login'%}">
           {% csrf_token %}
           {{ form|crispy }}
