add main page template

--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -1,8 +1,10 @@
+/* MENU CSS */
 #body-row {
     margin-left:0;
     margin-right:0;
 }
 #sidebar-container {
+    
     height: 100%;
     position: fixed;
     z-index: 1;
@@ -13,6 +15,7 @@
     padding: 0;
 }
 #main-content{
+    
     margin-left: 230px;
 }
 
@@ -93,7 +96,7 @@
     height: 100px;
     border-radius: 15px;
 }
-.svg-inline--fa.fa-fw , #collapse-icon {
+.svg-inline--fa.fa-fw , #collapse-icon, .fa-star {
     color: #ff6689;
 }
 
@@ -117,7 +120,6 @@
     display: none;
     z-index: 1;
     background-color: white;
-    /* border-bottom: 1px solid #020060; */
     overflow: hidden;
     opacity: 0.95;
 }
@@ -164,6 +166,55 @@ ul>li {
     margin: 0px auto;
 }
 
+/* MAIN PAGE CSS */
+
+.map-container{
+    overflow:hidden;
+    position:relative;
+    border: 1px solid #020060;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.map-container iframe{
+    left:0;
+    top:0;
+    height:500px;
+    width:100%;
+    position:absolute;
+}
+.deals-container{
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-between; */
+    margin-top: 20px;
+}
+.card{
+    margin-bottom: 20px;
+    border: 1px solid #020060;
+    width: 49%;
+    color: #020060;
+    float: left;
+}
+.card:nth-child(2n-1){
+    float: right;
+}
+.card-header{
+    background-color: #020060;
+    color: white;
+    font-weight: bold;
+}
+.card-text{
+    color: #020060;
+}
+.btn{
+    background-color: #020060;
+    color: white;
+}
+.fa-angle-double-right{
+    color: #5ce1e6;
+}
+
+
 @media(max-width : 767px){
 
     .navbar1 {
@@ -177,6 +228,17 @@ ul>li {
     }
     #navbar-header {
         display: block;
+    }
+    
+}
+
+
+@media(max-width : 900px){
+    .deals-container{
+        display: block;
+    }
+    .card{
+        width: 100%;
     }
 
 }
