--- a/main_app/templates/mainpage.html
+++ b/main_app/templates/mainpage.html
@@ -8,47 +8,48 @@
   
   <!--Google Maps-->
   
-<div class="card text-center">
+<div class="card text-center ">
     <div class="card-header">
-        <i class="fas fa-star"></i>
-        &nbsp; &nbsp;Special Wine
+        Special Wine
     </div>
     <div class="card-body">
         <h5 class="card-title">Cibo (Italian Restaurant)</h5>
         <p class="card-text">We offer half a price wine between 3PM to 6PM</p>
+        <a href="#" class="btn"><span class="fas fa-star fa-fw mr-3"></span>Favorites</a>
+
         <a href="#" class="btn">See more deals</a>
     </div>
 </div>
 <div class="card text-center">
     <div class="card-header">
-        <i class="fas fa-star"></i>
-        &nbsp; &nbsp;Special Wine
+        Special Wine
     </div>
     <div class="card-body">
         <h5 class="card-title">Cibo (Italian Restaurant)</h5>
         <p class="card-text">We offer half a price wine between 3PM to 6PM</p>
+        <a href="#" class="btn"><span class="fas fa-star fa-fw mr-3"></span>Favorites</a>
         <a href="#" class="btn">See more deals</a>
     </div>
 </div>
 <div class="card text-center">
     <div class="card-header">
-        <i class="fas fa-star"></i>
-        &nbsp; &nbsp;Special Wine
+        Special Wine
     </div>
     <div class="card-body">
         <h5 class="card-title">Cibo (Italian Restaurant)</h5>
         <p class="card-text">We offer half a price wine between 3PM to 6PM</p>
+        <a href="#" class="btn"><span class="fas fa-star fa-fw mr-3"></span>Favorites</a>
         <a href="#" class="btn">See more deals</a>
     </div>
 </div>
 <div class="card text-center">
     <div class="card-header">
-        <i class="fas fa-star"></i>
-        &nbsp; &nbsp;Special Wine
+        Special Wine
     </div>
     <div class="card-body">
         <h5 class="card-title">Cibo (Italian Restaurant)</h5>
         <p class="card-text">We offer half a price wine between 3PM to 6PM</p>
+        <a href="#" class="btn"><span class="fas fa-star fa-fw mr-3"></span>Favorites</a>
         <a href="#" class="btn">See more deals</a>
     </div>
 </div>
