--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -55,7 +55,7 @@
                 <a href="#" class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-start align-items-center">
                         <span class="fas fa-tasks fa-fw mr-3"></span>
-                        <span class="menu-collapsed">Favorits</span>
+                        <span class="menu-collapsed">Favorites</span>
                     </div>
                 </a>
                 <a href="#submenu2" data-toggle="collapse" aria-expanded="false" class=" list-group-item list-group-item-action flex-column align-items-start">
