restaurants page final

--- a/main_app/templates/restaurant.html
+++ b/main_app/templates/restaurant.html
@@ -39,15 +39,76 @@
         <div class="deals-review">
             <div class="card text-center ">
                 <div class="card-body">
-            
                 <div class="deals card-column">
+                    <h3>Deals $ Happy Hours</h3>
                     <ul>
-                        <li><div>Wine
-                            <p>MONDAY TO FRIDAY</p>
-                        </div><div>10$</div></li>
-                        <li>pizza</li>
-                        <li>pizza</li>
-                        <li>pizza</li>
+                        <li>
+                            <div>
+                                <h6>Pizza ( <span>MONDAY TO FRIDAY</span> ) </h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza ( <span>MONDAY TO FRIDAY</span> ) </h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza ( <span>MONDAY TO FRIDAY</span> ) </h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza ( <span>MONDAY TO FRIDAY</span> ) </h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza ( <span>MONDAY TO FRIDAY</span> ) </h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza(<span>MONDAY TO FRIDAY</span>)</h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza(<span>MONDAY TO FRIDAY</span>)</h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza(<span>MONDAY TO FRIDAY</span>)</h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza(<span>MONDAY TO FRIDAY</span>)</h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza(<span>MONDAY TO FRIDAY</span>)</h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+                        <li>
+                            <div>
+                                <h6>Pizza(<span>MONDAY TO FRIDAY</span>)</h6>
+                            </div>
+                        <div>10$</div>
+                        </li>
+
                     </ul>
                 </div>
                 <div class="review card-column">
@@ -65,6 +126,31 @@
                 </div>
                 </div>
         </div>
+        </div>
+    </div>
+    <div class="review-container">
+        <div class="card">
+            <div class="card-header">
+                Reviews
+            </div>
+            <div class="card-body">
+                <div>
+                    <h5>Yasaman</h5>
+                    <p>We came here for the Sunday brunch buffet and were pleased with the selection of items available. The pasta station and dessert stations were particularly delicious. They also had a made-to-order pizza station which was quite great as well. They lost a star however due to the staff member at the omelette station who was more interested in being on his phone rather than promptly serving the guests who were waiting. I'm talking about blatantly texting in full view with his back turned away from us kind of bad. All other staff including our server were great though.</p>
+                </div><hr>
+                <div>
+                    <h5>:)))</h5>
+                    <p>We came here for the Sunday brunch buffet and were pleased with the selection of items available. The pasta station and dessert stations were particularly delicious. They also had a made-to-order pizza station which was quite great as well. They lost a star however due to the staff member at the omelette station who was more interested in being on his phone rather than promptly serving the guests who were waiting. I'm talking about blatantly texting in full view with his back turned away from us kind of bad. All other staff including our server were great though.</p>
+                </div><hr>
+                <div>
+                    <h5>Waqas</h5>
+                    <p>We came here for the Sunday brunch buffet and were pleased with the selection of items available. The pasta station and dessert stations were particularly delicious.</p>
+                </div><hr>
+                <div>
+                    <h5>Antoine</h5>
+                    <p>We came here for the Sunday brunch buffet and were pleased with the selection of items available. The pasta station and dessert stations were particularly delicious. They also had a made-to-order pizza station which was quite great as well. They lost a star however due to the staff member at the omelette station who was more interested in being on his phone rather than promptly serving the guests who were waiting. I'm talking about blatantly texting in full view with his back turned away from us kind of bad. All other staff including our server were great though. They also had a made-to-order pizza station which was quite great as well. They lost a star however due to the staff member at the omelette station who was more interested in being on his phone rather than promptly serving the guests who were waiting. I'm talking about blatantly texting in full view with his back turned away from us kind of bad. All other staff including our server were great though.</p>
+                </div><hr>
+            </div>
         </div>
     </div>
 </main>
