--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -1,10 +1,18 @@
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #020146;
+}
+
 /* MENU CSS */
 #body-row {
     margin-left:0;
     margin-right:0;
 }
 #sidebar-container {
-    
     height: 100%;
     position: fixed;
     z-index: 1;
@@ -263,7 +271,7 @@ ul>li {
     display: block;
     border:none
 }
-.card-body>iframe {
+.card-column>iframe {
     width: 100%;
     padding: 0px;
     margin: 0px;
@@ -276,8 +284,40 @@ ul>li {
 .restaurant-info .btn {
     margin-top: 10px;
 }
-.deals>ul>li>div {
+
+.deals>ul>li>div:first-child {
 float: left;
+}
+
+.deals>ul>li>div:nth-child(2n){
+    float:right;
+}
+.deals>ul>li{
+    clear: both;
+}
+.deals>ul{
+    width: 80%;
+    overflow: scroll;
+}
+.deals span {
+    font-size: 13px;
+    color: #090177;
+    opacity: 0.8;
+}
+.deals-review> .card > .card-body > .card-column {
+    height:250px;
+    overflow-y: scroll;
+}
+
+.card-column>h3{
+    margin-bottom: 20px;
+}
+.review-container > .card {
+    width: 100%;
+}
+
+.review-container > .card> .card-header {
+    font-size: 22px;
 }
 
 @media(max-width : 767px){
@@ -293,6 +333,9 @@ float: left;
     }
     #navbar-header {
         display: block;
+    }
+    .card-column>h3{
+        font-size:20px ;
     }
     
 }
@@ -315,5 +358,10 @@ float: left;
     .card-column:first-child{
         border-right: none ;
     }
-
+    .deals>ul{
+        width: 100%;
+        margin:0;
+        padding: 0px;
+        overflow: scroll;
+    }
 }
